output/objects/Parcela_Mega__c.object
<CustomObject>
    <label>Parcela do Contrato</label>
    <nameField>
        <label>Parcela</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parcelas do Contrato</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Cobranca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cobrança</label>
        <referenceTo>Cobranca_v2__c</referenceTo>
        <relationshipLabel>Cobranças Relacionadas</relationshipLabel>
        <relationshipName>Cobrancas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrato_Mega__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrato Mega</label>
        <referenceTo>Contrato_Mega__c</referenceTo>
        <relationshipLabel>Parcelas do Contrato</relationshipLabel>
        <relationshipName>Parcelas_do_Contrato</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrato__c</fullName>
        <inlineHelpText>Campo preenchido pela importação</inlineHelpText>
        <label>Contrato</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Baixa__c</fullName>
        <label>Data Baixa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Vencimento__c</fullName>
        <label>Data Vencimento</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Linha_Digitavel_Mega__c</fullName>
        <inlineHelpText>Linha digitavel da remessa gerada no Mega</inlineHelpText>
        <label>Linha Digitável Mega</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aberto</fullName>
                </value>
                <value>
                    <fullName>Baixado</fullName>
                </value>
                <value>
                    <fullName>Inativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Contrato__c</columns>
        <columns>Contrato_Mega__c</columns>
        <columns>NAME</columns>
        <columns>Data_Vencimento__c</columns>
        <columns>Status__c</columns>
        <columns>Valor__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
</CustomObject>